--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -17,7 +17,7 @@ $color-grey-dark-3: #333;
 
 
 $default-font-size: 1.6rem;
-$main-font: 'Titillium Web', sans-serif;
+$main-font: 'Muli', sans-serif;
 
 
 // MEDIA QUERY MANAGER
