--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    color: $color-primary;
+    
     
     &__header{
         display:flex;
@@ -20,7 +20,7 @@
         position: relative;
         z-index: 1000;
         margin: 0 auto;
-        filter: contrast(200%);
+        color: $color-secondary;
         &>*{
             justify-self: center;
             align-self: center;
@@ -30,18 +30,29 @@
 }
 
 .heading-1{
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 600;
     opacity: 1;
+
+    @include respond(phone){
+        font-size: 4rem;
+        padding: 1rem 0;
+    }
 }
 .heading-2{
-    font-size: 2rem;
+    font-size: 1.9rem;
     font-weight: 500;
     padding-bottom: 50px;
     text-align: center;
+    @include respond(phone){
+        font-size: 2.6rem;
+    }
 }
 .heading-3{
-    font-size: 2.4rem;
+    font-size: 2.1rem;
     font-weight: 500;
     padding-bottom: 4px; 
+    @include respond(phone){
+        font-size: 2.6rem;
+    }
 }
