--- a/sass/components/_certificate.scss
+++ b/sass/components/_certificate.scss
@@ -8,6 +8,7 @@
         color: $color-grey-light-2;
         text-transform: uppercase;
         font-size: 2.4rem;
+        padding-top: 4rem;
         padding-bottom: 1rem;
         font-weight: 800;
    }
