--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,7 +5,7 @@
     left:0;
     height: 100vh;
     width: 100%;
-    background-color: rgba($color-tertiary-1, .8);
+    background-color: rgba($color-grey-dark-2, .8);
     color: $color-secondary;
     z-index: 1000;
     
@@ -17,7 +17,7 @@
         transform: translate(-50%, -50%);
         width: 75%;
         height: 50rem;
-        background-color: #fff;
+        background-color: $color-grey-light-1;
         box-shadow: 0 2rem 4rem rgba(0,0,0,0.2);
         border-radius: 3px;
         display: flex;
@@ -30,7 +30,7 @@
         position: absolute;
         top:0;
         right:0;
-        color: $color-grey-dark;
+        color: $color-grey-light-1;
         font-weight: 800;
         font-size: 3rem;
         border-radius: 50%;
@@ -39,7 +39,7 @@
         cursor: pointer;
         &:hover{
             transform: translate(2rem,-2rem) scale(1.3);
-            color: $color-grey-dark-2;
+            color: $color-tertiary-1;
         }
     }
 }
