--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,27 @@
     -webkit-transform: scale(2) rotateZ(360deg);
     transform: scale(2) rotateZ(360deg); } }
 
+@keyframes typewriter {
+  from {
+    width: 0%; }
+  to {
+    width: 100%; } }
+
+@keyframes blinking {
+  from {
+    border-right-color: rgba(247, 247, 247, 0.2); }
+  to {
+    border-right-color: rgba(35, 49, 66, 0.99); } }
+
 @keyframes fade {
   from {
     opacity: .4; }
+  to {
+    opacity: 1; } }
+
+@keyframes appear {
+  from {
+    opacity: 0; }
   to {
     opacity: 1; } }
 
@@ -529,7 +547,7 @@ body {
 .heading-1 {
   font-size: 3rem;
   font-weight: 600;
-  opacity: 1; }
+  animation: appear 0.6s steps(10) 1 normal forwards; }
   @media only screen and (min-width: 37.5em) {
     .heading-1 {
       font-size: 4rem;
@@ -539,15 +557,21 @@ body {
   font-size: 1.9rem;
   font-weight: 500;
   padding-bottom: 50px;
-  text-align: center; }
+  text-align: center;
+  animation: appear 0.5s steps(10) 1 normal forwards; }
   @media only screen and (min-width: 37.5em) {
     .heading-2 {
       font-size: 2.6rem; } }
 
 .heading-3 {
-  font-size: 2.1rem;
+  font-size: 1.88rem;
   font-weight: 500;
-  padding-bottom: 4px; }
+  padding-bottom: 4px;
+  padding-right: 5px;
+  white-space: nowrap;
+  animation: typewriter 4s steps(40) 0.6s 1 normal both, blinking 500ms steps(40) infinite normal;
+  overflow: hidden;
+  border-right: 1px solid rgba(35, 49, 66, 0.99); }
   @media only screen and (min-width: 37.5em) {
     .heading-3 {
       font-size: 2.6rem; } }
