--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -11,11 +11,24 @@
       -webkit-transform: scale(2) rotateZ(360deg);
               transform: scale(2) rotateZ(360deg);
     }
-  } 
+  }
+
+  @keyframes typewriter {
+    from{width: 0%}
+    to{ width: 100%}
+  }
+  @keyframes blinking{
+    from{ border-right-color: rgba($color-grey-light-1, 0.2)}
+    to{ border-right-color: rgba($color-secondary, 0.99)}
+  }
 
   @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
+  }
+  @keyframes appear{
+    from{opacity: 0}
+    to{ opacity: 1}
   }
  
 //Prticles
