--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -32,7 +32,7 @@
 .heading-1{
     font-size: 3rem;
     font-weight: 600;
-    opacity: 1;
+    animation: appear .6s steps(10) 1 normal forwards;
 
     @include respond(phone){
         font-size: 4rem;
@@ -44,14 +44,24 @@
     font-weight: 500;
     padding-bottom: 50px;
     text-align: center;
+    animation: appear .5s steps(10) 1 normal forwards;
     @include respond(phone){
         font-size: 2.6rem;
     }
 }
 .heading-3{
-    font-size: 2.1rem;
+    font-size: 1.88rem;
     font-weight: 500;
-    padding-bottom: 4px; 
+    padding-bottom: 4px;
+    padding-right: 5px;
+    white-space: nowrap;
+    animation: typewriter 4s steps(40) .6s 1 normal both,
+                blinking 500ms steps(40) infinite normal;
+    //animation: name duration timing-function delay iteration-count direction fill-mode;
+    overflow: hidden;
+    
+
+    border-right: 1px solid rgba($color-secondary, 0.99);
     @include respond(phone){
         font-size: 2.6rem;
     }
