--- a/css/style.css
+++ b/css/style.css
@@ -22,21 +22,17 @@
   to {
     width: 100%; } }
 
-@keyframes blinking {
-  from {
-    border-right-color: rgba(247, 247, 247, 0.2); }
-  to {
-    border-right-color: rgba(35, 49, 66, 0.99); } }
+@keyframes buttonBlink {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(1.2); }
+  100% {
+    transform: scale(1); } }
 
 @keyframes fade {
   from {
     opacity: .4; }
-  to {
-    opacity: 1; } }
-
-@keyframes appear {
-  from {
-    opacity: 0; }
   to {
     opacity: 1; } }
 
@@ -85,7 +81,8 @@ body {
     font-weight: 500;
     transition: all .3s;
     outline: 3px solid rgba(247, 247, 247, 0.7);
-    outline-offset: .5rem; }
+    outline-offset: .5rem;
+    animation: buttonBlink .6s 3.6s 2 normal; }
     .btn-header:hover {
       outline: 3px solid rgba(247, 247, 247, 0.9);
       outline-offset: .1rem;
@@ -547,7 +544,10 @@ body {
 .heading-1 {
   font-size: 3rem;
   font-weight: 600;
-  animation: appear 0.6s steps(10) 1 normal forwards; }
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 1.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-1 {
       font-size: 4rem;
@@ -558,7 +558,9 @@ body {
   font-weight: 500;
   padding-bottom: 50px;
   text-align: center;
-  animation: appear 0.5s steps(10) 1 normal forwards; }
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 2.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-2 {
       font-size: 2.6rem; } }
@@ -568,10 +570,10 @@ body {
   font-weight: 500;
   padding-bottom: 4px;
   padding-right: 5px;
+  text-align: center;
   white-space: nowrap;
-  animation: typewriter 4s steps(40) 0.6s 1 normal both, blinking 500ms steps(40) infinite normal;
   overflow: hidden;
-  border-right: 1px solid rgba(35, 49, 66, 0.99); }
+  animation: typewriter 1s steps(40) 0.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-3 {
       font-size: 2.6rem; } }
