--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -17,19 +17,17 @@
     from{width: 0%}
     to{ width: 100%}
   }
-  @keyframes blinking{
-    from{ border-right-color: rgba($color-grey-light-1, 0.2)}
-    to{ border-right-color: rgba($color-secondary, 0.99)}
+  @keyframes buttonBlink{
+    0%{transform: scale(1)}
+    50%{transform: scale(1.2)}
+    100%{transform: scale(1)}
   }
 
   @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
   }
-  @keyframes appear{
-    from{opacity: 0}
-    to{ opacity: 1}
-  }
+
  
 //Prticles
 #particles-js{
