--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -16,6 +16,20 @@
     -webkit-transform: scale(2) rotateZ(360deg);
     transform: scale(2) rotateZ(360deg); } }
 
+@keyframes typewriter {
+  from {
+    width: 0%; }
+  to {
+    width: 100%; } }
+
+@keyframes buttonBlink {
+  0% {
+    transform: scale(1); }
+  50% {
+    transform: scale(1.2); }
+  100% {
+    transform: scale(1); } }
+
 @keyframes fade {
   from {
     opacity: .4; }
@@ -67,7 +81,8 @@ body {
     font-weight: 500;
     transition: all .3s;
     outline: 3px solid rgba(247, 247, 247, 0.7);
-    outline-offset: .5rem; }
+    outline-offset: .5rem;
+    animation: buttonBlink .6s 3.6s 2 normal; }
     .btn-header:hover {
       outline: 3px solid rgba(247, 247, 247, 0.9);
       outline-offset: .1rem;
@@ -328,10 +343,10 @@ body {
     width: 4.3rem; }
   .nav__header {
     font-size: 2rem;
+    font-weight: 500;
     padding-left: 1rem;
-    transform: translateY(-0.5rem);
     color: #7E31ED;
-    transition: all 1s; }
+    transition: all .5s; }
     .nav__header h6 {
       line-height: 1rem; }
   .nav__icon {
@@ -529,7 +544,10 @@ body {
 .heading-1 {
   font-size: 3rem;
   font-weight: 600;
-  opacity: 1; }
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 1.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-1 {
       font-size: 4rem;
@@ -539,15 +557,23 @@ body {
   font-size: 1.9rem;
   font-weight: 500;
   padding-bottom: 50px;
-  text-align: center; }
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 2.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-2 {
       font-size: 2.6rem; } }
 
 .heading-3 {
-  font-size: 2.1rem;
+  font-size: 1.88rem;
   font-weight: 500;
-  padding-bottom: 4px; }
+  padding-bottom: 4px;
+  padding-right: 5px;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 0.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-3 {
       font-size: 2.6rem; } }
