--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,8 +13,10 @@ html{
 }
 .toggle{
     display: none;
-    @include respond(tab-port){
-        display: flex;
+}
+@include respond(tab-port){
+    .toggle-menu{
+        display:flex
     }
 }
 body{
