--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -366,7 +366,7 @@ body {
       .nav__icon {
         display: none; } }
   .nav-right {
-    display: none;
+    display: block;
     font-size: 2rem;
     width: 130px;
     float: right;
