--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -41,7 +41,7 @@
         }
     }
     &-right{
-        display: none;
+        display: block;
         font-size: 2rem;
         width: 130px;
         float: right;
