--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,9 @@ body {
 .btn {
   padding: 1rem 2rem;
   border: 2px solid rgba(0, 0, 0, 0.5);
-  border-radius: .5rem;
-  opacity: .7;
-  font-size: 2.2rem;
+  border-radius: 0.5rem;
+  opacity: 0.7;
+  font-size: 2rem;
   text-transform: capitalize;
   width: max-content;
   cursor: pointer; }
@@ -83,13 +83,13 @@ body {
     color: #f7f7f7;
     background-color: rgba(63, 91, 124, 0.8);
     font-weight: 500;
-    transition: all .3s;
+    transition: all 0.3s;
     outline: 3px solid rgba(247, 247, 247, 0.7);
-    outline-offset: .5rem;
-    animation: buttonBlink .6s 3.6s 2 normal; }
+    outline-offset: 0.5rem;
+    animation: buttonBlink 0.6s 3.6s 2 normal; }
     .btn-header:hover {
       outline: 3px solid rgba(247, 247, 247, 0.9);
-      outline-offset: .1rem;
+      outline-offset: 0.1rem;
       background-color: #3f5b7c; }
     .btn-header:active {
       transform: scale(0.8); }
@@ -97,7 +97,7 @@ body {
     color: #233142;
     background-color: #f7f7f7;
     margin: 0 auto;
-    transition: transform .3s; }
+    transition: transform 0.3s; }
     .btn__contactMe:hover {
       transform: scale(1.05); }
     .btn__contactMe:active {
@@ -119,18 +119,18 @@ body {
   .social div a:hover {
     text-decoration: none;
     cursor: pointer;
-    transition: transfrom .3s; }
+    transition: transfrom 0.3s; }
   .social--github:hover {
     color: #111;
     transform: translateY(-0.4rem); }
   .social--linkedin:hover {
-    color: #0077B5;
+    color: #0077b5;
     transform: translateY(-0.4rem); }
   .social--twitter:hover {
-    color: #1DA1F2;
+    color: #1da1f2;
     transform: translateY(-0.4rem); }
   .social--facebook:hover {
-    color: #4267B2;
+    color: #4267b2;
     transform: translateY(-0.4rem); }
 
 .card {
@@ -355,11 +355,11 @@ body {
     font-weight: 500;
     padding-left: 1rem;
     color: #7E31ED;
-    transition: all .5s; }
+    transition: all 0.5s; }
     .nav__header h6 {
       line-height: 1rem; }
   .nav__icon {
-    font-size: 3rem;
+    font-size: 2rem;
     color: #7E31ED;
     cursor: pointer; }
     @media only screen and (min-width: 56.25em) {
@@ -367,7 +367,7 @@ body {
         display: none; } }
   .nav-right {
     display: block;
-    font-size: 2rem;
+    font-size: 1.4rem;
     width: 130px;
     float: right;
     text-align: center;
@@ -388,7 +388,7 @@ body {
       cursor: pointer; }
       @media only screen and (min-width: 56.25em) {
         .nav-right > ul > li {
-          font-size: 2rem;
+          font-size: 1.3rem;
           color: #7E31ED;
           border: 1.4px solid #333;
           background-color: #974dff;
@@ -398,7 +398,7 @@ body {
           .nav-right > ul > li:hover {
             background-color: #7E31ED; }
           .nav-right > ul > li:not(:last-child) {
-            margin-right: .5em; } }
+            margin-right: 0.5em; } }
   @media only screen and (min-width: 56.25em) {
     .nav__list {
       float: right; } }
@@ -582,7 +582,7 @@ body {
       align-self: center; }
 
 .heading-1 {
-  font-size: 3rem;
+  font-size: 1.6rem;
   font-weight: 600;
   text-align: center;
   white-space: nowrap;
@@ -590,11 +590,11 @@ body {
   animation: typewriter 1s steps(40) 1.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-1 {
-      font-size: 4rem;
+      font-size: 2.8rem;
       padding: 1rem 0; } }
 
 .heading-2 {
-  font-size: 1.9rem;
+  font-size: 1.4rem;
   font-weight: 500;
   padding-bottom: 50px;
   text-align: center;
@@ -603,10 +603,10 @@ body {
   animation: typewriter 1s steps(40) 2.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-2 {
-      font-size: 2.6rem; } }
+      font-size: 2.5rem; } }
 
 .heading-3 {
-  font-size: 1.88rem;
+  font-size: 1.3rem;
   font-weight: 500;
   padding-bottom: 4px;
   padding-right: 5px;
@@ -616,4 +616,4 @@ body {
   animation: typewriter 1s steps(40) 0.6s 1 normal both; }
   @media only screen and (min-width: 37.5em) {
     .heading-3 {
-      font-size: 2.6rem; } }
+      font-size: 2.2rem; } }
