--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,87 +1,85 @@
-.btn{
-    padding: 1rem 2rem;
-    border: 2px solid rgba(0,0,0, 0.5);
-    border-radius: .5rem;
-    opacity: .7;
-    font-size: 2.2rem;
-    text-transform: capitalize;
-    width: max-content;
+.btn {
+  padding: 1rem 2rem;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
+  opacity: 0.7;
+  font-size: 2rem;
+  text-transform: capitalize;
+  width: max-content;
+  cursor: pointer;
+
+  &-header {
+    border: none;
+    margin-bottom: 10rem;
+    opacity: 1;
+    color: $color-grey-light-1;
+    background-color: rgba($color-secondary-light, 0.8);
+    font-weight: 500;
+    transition: all 0.3s;
+    outline: 3px solid rgba($color-grey-light-1, 0.7);
+    outline-offset: 0.5rem;
+    animation: buttonBlink 0.6s 3.6s 2 normal;
+
+    &:hover {
+      outline: 3px solid rgba($color-grey-light-1, 0.9);
+      outline-offset: 0.1rem;
+      background-color: $color-secondary-light;
+    }
+    &:active {
+      transform: scale(0.8);
+    }
+  }
+
+  &__contactMe {
+    color: $color-secondary;
+    background-color: $color-grey-light-1;
+    margin: 0 auto;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+    &:active {
+      transform: scale(1.05);
+    }
+    &:focus {
+      outline: none;
+    }
+  }
+}
+.social {
+  display: flex;
+  letter-spacing: 10px;
+  font-size: 3.5rem;
+  justify-content: center;
+  align-content: center;
+  z-index: 990;
+
+  & div a {
+    color: inherit;
+    text-decoration: none;
+    filter: contrast(200%);
+  }
+
+  & div a:hover {
+    text-decoration: none;
     cursor: pointer;
-    
-    &-header{
-        border: none;
-        margin-bottom: 10rem;
-        opacity: 1;
-        color: $color-grey-light-1;
-        background-color: rgba($color-secondary-light, .8);
-        font-weight: 500;
-        transition: all .3s;
-        outline: 3px solid rgba($color-grey-light-1, .7);
-        outline-offset: .5rem;
-        animation: buttonBlink .6s 3.6s 2 normal;
-        
-        &:hover{
-            outline: 3px solid rgba($color-grey-light-1, .9);
-            outline-offset: .1rem;
-            background-color: $color-secondary-light;
-        }
-        &:active{
-            transform: scale(0.8);
-        }
-    }
-
-    &__contactMe{
-        color: $color-secondary;
-        background-color: $color-grey-light-1;
-        margin: 0 auto;
-        transition: transform .3s;
-
-        &:hover{
-            transform: scale(1.05);
-        }
-        &:active{
-            transform: scale(1.05);
-        }
-        &:focus{
-            outline: none;           
-        }
-    }
+    transition: transfrom 0.3s;
+  }
+  &--github:hover {
+    color: #111;
+    transform: translateY(-0.4rem);
+  }
+  &--linkedin:hover {
+    color: #0077b5;
+    transform: translateY(-0.4rem);
+  }
+  &--twitter:hover {
+    color: #1da1f2;
+    transform: translateY(-0.4rem);
+  }
+  &--facebook:hover {
+    color: #4267b2;
+    transform: translateY(-0.4rem);
+  }
 }
-.social{
-    display: flex;
-    letter-spacing: 10px;
-    font-size: 3.5rem;
-    justify-content: center;
-    align-content: center;
-    z-index: 990;
-        
-    & div a {
-        color: inherit;
-        text-decoration: none;
-        filter: contrast(200%);
-    }
-    
-    & div a:hover{
-        text-decoration:none;
-        cursor:pointer; 
-       transition: transfrom .3s; 
-    }
-    &--github:hover{
-        color: #111;
-        transform: translateY(-.4rem);
-    }
-    &--linkedin:hover{
-        color: #0077B5;
-        transform: translateY(-.4rem);
-    }
-    &--twitter:hover{
-        color: #1DA1F2;
-        transform: translateY(-.4rem);
-    }
-    &--facebook:hover{
-        color: #4267B2;
-        transform: translateY(-.4rem);
-    }
-}
-
-
