--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -1,89 +1,88 @@
-.nav{
-    position: fixed;
-    z-index: 1100;
-    width: 100%;
+.nav {
+  position: fixed;
+  z-index: 1100;
+  width: 100%;
 
-    &-left{
-        display: flex; 
-        justify-content: space-between; 
-        align-items: center;
-        padding: 1rem 1.4rem;
-        @include respond(tab-port){
-            display: inline-block;
-            float: left;
-            transform: translateY(15%);
-        }
+  &-left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.4rem;
+    @include respond(tab-port) {
+      display: inline-block;
+      float: left;
+      transform: translateY(15%);
     }
-    &__logo{
-        display: flex;
-        text-decoration: none;
+  }
+  &__logo {
+    display: flex;
+    text-decoration: none;
+  }
+  &__img {
+    height: 5rem;
+    width: 4.3rem;
+  }
+  &__header {
+    font-size: 2rem;
+    font-weight: 500;
+    padding-left: 1rem;
+    color: $color-primary;
+    transition: all 0.5s;
+    & h6 {
+      line-height: 1rem;
     }
-    &__img{
-        height: 5rem;
-        width: 4.3rem;
+  }
+  &__icon {
+    font-size: 2rem;
+    color: $color-primary;
+    cursor: pointer;
+    @include respond(tab-port) {
+      display: none;
     }
-    &__header{
-        font-size: 2rem;
-        font-weight: 500;
-        padding-left: 1rem;
-        color:$color-primary;
-        transition: all .5s;
-        & h6{
-            line-height: 1rem;
-        }
+  }
+  &-right {
+    display: block;
+    font-size: 1.4rem;
+    width: 130px;
+    float: right;
+    text-align: center;
+    align-self: center;
+
+    @include respond(tab-port) {
+      display: flex;
+      width: max-content;
+      padding: 1rem 1.4rem;
     }
-    &__icon{
-        font-size: 3rem;
+    & > ul > li {
+      list-style: none;
+      font-weight: 600;
+      border-bottom: 1px solid $color-grey-light-2;
+      border-radius: 5px;
+      margin: 1rem 0;
+      background-color: $color-grey-dark-3;
+      color: $color-grey-light-1;
+      cursor: pointer;
+      @include respond(tab-port) {
+        font-size: 1.3rem;
         color: $color-primary;
-        cursor: pointer;
-        @include respond(tab-port){
-            display: none;
+        border: 1.4px solid $color-grey-dark-3;
+        background-color: $color-primary-light;
+        color: $color-grey-light-1;
+        padding: 1rem;
+        border-radius: 0 5px 0 5px;
+        &:hover {
+          background-color: $color-primary;
         }
-    }
-    &-right{
-        display: block;
-        font-size: 2rem;
-        width: 130px;
-        float: right;
-        text-align: center;
-        align-self: center;
-              
-        @include respond(tab-port){
-            display: flex;
-            width: max-content;
-            padding: 1rem 1.4rem;     
-        }
-        &>ul>li{
-            list-style: none; 
-            font-weight: 600;
-            border-bottom: 1px solid $color-grey-light-2;
-            border-radius: 5px;
-            margin: 1rem 0;
-            background-color: $color-grey-dark-3;      
-            color: $color-grey-light-1;
-            cursor: pointer;
-            @include respond(tab-port){
-                font-size: 2rem;
-                color: $color-primary;
-                border: 1.4px solid $color-grey-dark-3;
-                background-color: $color-primary-light;
-                color: $color-grey-light-1;
-                padding: 1rem;
-                border-radius: 0 5px 0 5px;
-                &:hover{
-                    background-color: $color-primary;
-                }
 
-                &:not(:last-child){                   
-                    margin-right: .5em;                    
-                }              
-            }
-           
+        &:not(:last-child) {
+          margin-right: 0.5em;
         }
+      }
     }
-    &__list{
-        @include respond(tab-port){
-           float: right;
-        }
+  }
+  &__list {
+    @include respond(tab-port) {
+      float: right;
     }
+  }
 }
