--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,70 +1,72 @@
-.hero{
-    width: 100%;
-    height: 100vh;
-    background-image: radial-gradient(rgba($color-tertiary-1, 0.99),rgba($color-tertiary-2, 0.85)), url("/resources/sam-erwin-474207-unsplash.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+.hero {
+  width: 100%;
+  height: 100vh;
+  background-image: radial-gradient(
+      rgba($color-tertiary-1, 0.99),
+      rgba($color-tertiary-2, 0.85)
+    ),
+    url("/resources/sam-erwin-474207-unsplash.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+
+  &__header {
     display: flex;
+    height: auto;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
-    
-    &__header{
-        display:flex;
-        height: auto;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        position: relative;
-        z-index: 999;
-        margin: 0 auto;
-        color: $color-secondary;
-        &>*{
-            justify-self: center;
-            align-self: center;
-            
-        }
+    position: relative;
+    z-index: 999;
+    margin: 0 auto;
+    color: $color-secondary;
+    & > * {
+      justify-self: center;
+      align-self: center;
     }
+  }
 }
 
-.heading-1{
-    font-size: 3rem;
-    font-weight: 600;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: typewriter 1s steps(40) 1.6s 1 normal both;
+.heading-1 {
+  font-size: 1.6rem;
+  font-weight: 600;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 1.6s 1 normal both;
 
-    @include respond(phone){
-        font-size: 4rem;
-        padding: 1rem 0;
-    }
+  @include respond(phone) {
+    font-size: 2.8rem;
+    padding: 1rem 0;
+  }
 }
-.heading-2{
-    font-size: 1.9rem;
-    font-weight: 500;
-    padding-bottom: 50px;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: typewriter 1s steps(40) 2.6s 1 normal both;
-    @include respond(phone){
-        font-size: 2.6rem;
-    }
+.heading-2 {
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding-bottom: 50px;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 2.6s 1 normal both;
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 }
-.heading-3{
-    font-size: 1.88rem;
-    font-weight: 500;
-    padding-bottom: 4px;
-    padding-right: 5px;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: typewriter 1s steps(40) .6s 1 normal both;
-   
-    @include respond(phone){
-        font-size: 2.6rem;
-    }
+.heading-3 {
+  font-size: 1.3rem;
+  font-weight: 500;
+  padding-bottom: 4px;
+  padding-right: 5px;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typewriter 1s steps(40) 0.6s 1 normal both;
+
+  @include respond(phone) {
+    font-size: 2.2rem;
+  }
 }
